<resources>
    <string name="app_name">Assignement003</string>
    <string name="gps_tracker">GPS Tracker</string>
    <string name="start_recording">Start recording</string>
    <string name="stop_recording">Stop recording</string>
    <string name="record_summary">Record summary</string>
    <string name="average_speed">Average speed =</string>
    <string name="total_distance">Total distance =</string>
    <string name="time_taken">Time taken =</string>
    <string name="minimum_altitute">Minimum altitute =</string>
    <string name="maximum_altitude">Maximum altitude =</string>
    <string name="Return_home">Return</string>
    <string name="Latitude_info">Latitude = %1$f</string>
    <string name="Longitude_info">Longitude = %1$f</string>
    <string name="Time_taken">Time taken = %1$f seconds</string>
    <string name="Distance">Total distance = %1$f m</string>
    <string name="Speed">Average speed = %1$f m/s</string>
    <string name="minAlt">Minimum altitude = %1$d m</string>
    <string name="maxAlt">Maximum altitude = %1$d m</string>
    <string name="open_file">Open file</string>
</resources>