<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultDisplay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ResultTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record_summary"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/AverageSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/average_speed"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:id="@+id/TotalDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_distance"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

        <TextView
            android:id="@+id/Timetaken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_taken"
            android:layout_marginTop="60sp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/MinimumAlt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textSize="18sp"
                android:text="@string/minimum_altitute" />

            <TextView
                android:id="@+id/MaximumAlt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textSize="18sp"
                android:text="@string/maximum_altitude" />
        </LinearLayout>

        <Button
            android:id="@+id/ButtonReturn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:text="@string/Returnhome"
            android:onClick="onClickReturn"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>