<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gps_tracker"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

        <Button
            android:id="@+id/StartButton"
            android:layout_width="match_parent"
            android:layout_marginTop="120dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:onClick="onClickStart"
            android:text="@string/start_recording" />


        <Chronometer
            android:id="@+id/simpleChronometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:textAlignment="center"
            android:textSize="60sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/minimum_altitute"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/maximum_altitude"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>